Tomar Selfie y Mostrar en pantalla con guía al centro

--- a/src-React/src/theme/estilos.css
+++ b/src-React/src/theme/estilos.css
@@ -9,3 +9,12 @@
   height: 100%;
   font-size: smaller;
 }
+
+#imagen_guia_fotografia {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 300px;
+  max-height: 300px;
+}
